sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:5: error: '(' expected but identifier found.
      if liste(i)>liste(i+1){
         ^AlgBubbleSort2:8: error: illegal start of simple expression
    }
    ^