sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2(liste:List[Char]):List[Char] = {
  for(i <- 1 to liste.length-2){
    for(j<- 1 to i){
      if liste(i)>liste(i+1){
        swap(liste(i),liste(j));
      }
    }
  }
}